# AI-clerk

./: .env.example  .gitignore  Dockerfile  HANDOFF.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-06-15-phase1-foundation.md  2026-06-15-phase2-profile-location.md  2026-06-16-phase3-trip-orchestration.md
docs/superpowers/specs/: 2026-06-15-ai-secretary-business-trips-design.md  2026-06-15-phase2-profile-location-design.md  2026-06-16-phase3-trip-orchestration-design.md
src/ai_clerk/: config.py  crypto.py
src/ai_clerk/bot/: admin.py  main.py  middleware.py  onboarding.py  permissions.py  profile_handlers.py  trip_handlers.py
src/ai_clerk/data/: airports_kz.csv
src/ai_clerk/db/: base.py  models.py
src/ai_clerk/location/: airports.py  aliases.py  service.py
src/ai_clerk/profile/: dto.py  masking.py  service.py
src/ai_clerk/roles/: enums.py  invites.py  service.py
tests/: conftest.py  test_admin.py  test_airports.py  test_config.py  test_crypto.py  test_db.py  test_invites.py  test_location_airport_for_city.py  test_location_aliases.py  test_location_service.py  test_onboarding.py  test_permissions.py  test_profile_extraction_fields.py  test_profile_masking.py  test_profile_model.py  test_profile_ocr.py  test_profile_pdf_text.py  test_profile_service.py  test_role_service.py  test_smoke.py  test_trip_llm.py  test_trip_model.py  test_trip_options.py  test_trip_orchestrator.py  test_trip_presentation.py  test_trip_provider_mock.py  test_trip_ranking.py  test_trip_request.py  test_trip_service.py
tests/fixtures/: airports_sample.csv
(+12 files in other folders)
