[project]
name = "ai-clerk"
version = "0.1.0"
description = "Personal AI secretary Telegram bot (business trips module)"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.13",
    "pydantic-settings>=2.5",
    "cryptography>=43",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_clerk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
